--- a/app/src/main/res/layout/folder_design.xml
+++ b/app/src/main/res/layout/folder_design.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="#E3E3E3"
+    android:background="#D7D8FB"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -11,7 +11,7 @@
     <ImageView
         android:id="@+id/folderImage"
         android:layout_width="110dp"
-        android:layout_height="120dp"
+        android:layout_height="130dp"
         android:layout_margin="10dp"
         android:scaleType="fitXY"
         android:src="@mipmap/ic_launcher_round"
@@ -23,12 +23,12 @@
         android:id="@+id/folderName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="start"
         android:text="FolderName - CameraScanner"
         android:textColor="@color/black"
+        android:layout_marginStart="10dp"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.232"
         app:layout_constraintStart_toEndOf="@+id/folderImage"
         app:layout_constraintTop_toTopOf="@+id/folderImage" />
 
@@ -40,6 +40,7 @@
         android:layout_marginTop="10dp"
         android:text="16/12/1999"
         android:textSize="16sp"
+        android:textColor="@color/black"
         app:layout_constraintStart_toEndOf="@+id/folderImage"
         app:layout_constraintTop_toBottomOf="@+id/folderName" />
 
@@ -47,6 +48,7 @@
         android:id="@+id/folderTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:text="20:15"
@@ -59,6 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:textColor="@color/black"
         android:layout_marginTop="10dp"
         android:text="No Of Pages :"
         android:textSize="16sp"
@@ -70,6 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
+        android:textColor="@color/black"
         android:layout_marginTop="10dp"
         android:text="02"
         android:textSize="16sp"
