--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:title="Create Document"
-        android:icon="@drawable/ic_baseline_android_24"
+        android:icon="@drawable/document_icon"
         android:id="@+id/createDocument"
         app:showAsAction="ifRoom"/>
 
