--- a/app/src/main/res/layout/folder_design.xml
+++ b/app/src/main/res/layout/folder_design.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="#D5EFF8"
     android:layout_marginTop="5dp"
+    android:id="@+id/folderDesign"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
