--- a/app/src/main/res/layout/folder_design.xml
+++ b/app/src/main/res/layout/folder_design.xml
@@ -11,10 +11,11 @@
 
     <ImageView
         android:id="@+id/folderImage"
+        android:background="#FFFFFF"
         android:layout_width="110dp"
-        android:layout_height="130dp"
+        android:layout_height="150dp"
         android:layout_margin="10dp"
-        android:scaleType="fitXY"
+        android:scaleType="fitCenter"
         android:src="@mipmap/ic_launcher_round"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
