--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -2,6 +2,7 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="#D5EFF8"
     android:layout_width="match_parent"
     android:id="@+id/drawerLayout2"
     android:layout_height="match_parent"
@@ -44,8 +45,6 @@
             app:layout_constraintBottom_toTopOf="@+id/fabGalleryMultiple"
             app:layout_constraintEnd_toEndOf="parent" />
 
-
-
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fabGalleryMultiple"
             android:layout_width="wrap_content"
@@ -58,6 +57,15 @@
             app:fabSize="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/imageRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/navigationToolbar2" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
