We create menu to move images but problem
There is one problem that when we drag and move the item then delete option also comming

--- a/app/src/main/res/menu/toolbar_menu_2.xml
+++ b/app/src/main/res/menu/toolbar_menu_2.xml
@@ -13,6 +13,11 @@
         android:title="PDF Setting"
         />
 
+    <item
+        android:id="@+id/moveImage"
+        android:title="Move Images"
+        android:checkable="true"/>
+
 
 
 
