--- a/app/src/main/res/layout/folder_design.xml
+++ b/app/src/main/res/layout/folder_design.xml
@@ -15,7 +15,7 @@
         android:layout_width="110dp"
         android:layout_height="150dp"
         android:layout_margin="10dp"
-        android:scaleType="fitCenter"
+        android:scaleType="center"
         android:src="@mipmap/ic_launcher_round"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
