--- a/app/src/main/res/layout/folder_file_design.xml
+++ b/app/src/main/res/layout/folder_file_design.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="120dp"
-    android:layout_height="180dp"
+    android:layout_width="180dp"
+    android:layout_height="250dp"
     android:id="@+id/cardViewFiles"
     android:layout_margin="10dp"
     android:elevation="6dp"
@@ -19,7 +19,7 @@
             android:id="@+id/fileImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="fitCenter"
+            android:scaleType="center"
             android:src="@drawable/camera_icon"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -28,12 +28,12 @@
 
         <TextView
             android:id="@+id/filePosition"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
+            android:background="#706D6D"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="5dp"
             android:text="1"
-            android:textColor="@color/black"
+            android:paddingStart="5dp"
+            android:textColor="@color/white"
             android:textSize="18dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
