--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -73,7 +73,10 @@
             android:layout_height="1754px"
             android:orientation="vertical"
             android:gravity="center"
-            android:padding="12dp"
+            android:paddingStart="32px"
+            android:paddingEnd="32px"
+            android:paddingTop="32px"
+            android:paddingBottom="32px"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -86,13 +89,6 @@
                 android:layout_weight="1"
                 android:scaleType="fitCenter"/>
 
-            <ImageView
-                android:id="@+id/invisibleImageViewBest"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:scaleType="fitCenter" />
-
         </LinearLayout>
 
         <LinearLayout
@@ -101,7 +97,10 @@
             android:layout_height="842px"
             android:orientation="vertical"
             android:gravity="center"
-            android:padding="10dp"
+            android:paddingStart="15px"
+            android:paddingEnd="15px"
+            android:paddingTop="15px"
+            android:paddingBottom="15px"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -122,11 +121,21 @@
             android:layout_height="2339px"
             android:orientation="vertical"
             android:gravity="center"
-            android:padding="15dp"
+            android:paddingStart="40px"
+            android:paddingEnd="40px"
+            android:paddingTop="40px"
+            android:paddingBottom="40px"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/invisibleImageViewBest"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:scaleType="fitCenter" />
 
         </LinearLayout>
 
